EN-13866: Fix login styles on mobile (#4061)
* EN-13866: Fix login styles on mobile

* Even more better mobile styles

* Move common styles out

* Even more generalizing scss!

--- a/public/javascripts/signin/components/Alerts/alerts.scss
+++ b/public/javascripts/signin/components/Alerts/alerts.scss
@@ -1,5 +1,4 @@
-$default-font-path: "socrata-components/dist/fonts/";
-@import "styleguide-no-tag-level.scss";
+@import "../../common";
 
 .alert-base {
   @extend .alert;
