--- a/public/javascripts/signin/components/signup.scss
+++ b/public/javascripts/signin/components/signup.scss
@@ -1,15 +1,7 @@
-$default-font-path: "socrata-components/dist/fonts/";
-
-@import "styleguide-no-tag-level.scss";
-@import "_colors.scss";
-
-.center {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
+@import "../common";
 
 .container {
+  @extend .center;
   @include base;
 
   position: relative;
@@ -17,16 +9,18 @@ $default-font-path: "socrata-components/dist/fonts/";
   flex-direction: column;
   margin-top: 1.5em;
   margin-bottom: 1.5em;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 650px;
-  min-width: 445px;
   background: $white;
   border: 1px solid $light-grey-3;
   padding-left: 3em;
   padding-right: 3em;
   padding-bottom: 1em;
   padding-top: 3em;
+  min-width: 225px;
+
+  /* If the screen is big enough, take up less of it */
+  @media screen and (min-width: $break-large) {
+    max-width: 650px;
+  }
 }
 
 .divider {
